--- a/dominio/dominio.csproj
+++ b/dominio/dominio.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Categorias.cs" />
     <Compile Include="Marcas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Trainee.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
