--- a/TpFinalNivel3_Arteaga_Ponssa_Lucas/TpFinalNivel3_Arteaga_Ponssa_Lucas.csproj
+++ b/TpFinalNivel3_Arteaga_Ponssa_Lucas/TpFinalNivel3_Arteaga_Ponssa_Lucas.csproj
@@ -102,6 +102,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Default.aspx" />
+    <Content Include="Error.aspx" />
     <Content Include="formularioArticulos.aspx" />
     <Content Include="Global.asax" />
     <Content Include="ListarArticulo.aspx" />
@@ -121,6 +122,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Error.aspx.cs">
+      <DependentUpon>Error.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Error.aspx.designer.cs">
+      <DependentUpon>Error.aspx</DependentUpon>
     </Compile>
     <Compile Include="formularioArticulos.aspx.cs">
       <DependentUpon>formularioArticulos.aspx</DependentUpon>
